Actualizados los buscadores AND y OR, Compuesto ahora es abstract